Fix front buttons on mobile

--- a/kcdc3/public/static/sass/_front.sass
+++ b/kcdc3/public/static/sass/_front.sass
@@ -119,6 +119,9 @@
 		font-weight: 600
 		background: #fff
 		border-radius: 4px
+		@media screen and (max-width: 600px)
+			display: block
+			clear: both
 	i:hover
 		color: #fff
 		background-color: $colorA
